[gd_scene load_steps=19 format=3 uid="uid://cicew6koqq028"]

[ext_resource type="Script" path="res://addons/godot-xr-tools/objects/pickable.gd" id="1_66iak"]
[ext_resource type="PackedScene" uid="uid://cygfkcuxna1en" path="res://src/assets/A1/Rag.glb" id="2_2n3tu"]
[ext_resource type="PackedScene" uid="uid://c25yxb0vt53vc" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_left.tscn" id="2_qagp5"]
[ext_resource type="PackedScene" uid="uid://cyy2j8ioc40oj" path="res://src/assets/A1/rag_oiled.tscn" id="3_i2thj"]
[ext_resource type="PackedScene" uid="uid://ctw7nbntd5pcj" path="res://addons/godot-xr-tools/objects/grab_points/grab_point_hand_right.tscn" id="4_qd7nr"]
[ext_resource type="PackedScene" uid="uid://ci2ih0equ4uoy" path="res://src/ois/state_managers/one_handed_tool.tscn" id="5_u3ew8"]
[ext_resource type="Script" path="res://src/ois/state_managers/state_manager_settings.gd" id="7_s2rum"]
[ext_resource type="PackedScene" uid="uid://0datjcm1gsqv" path="res://src/inventory/inventory_item_comp.tscn" id="8_i4qr8"]
[ext_resource type="PackedScene" uid="uid://cydplmlegksbk" path="res://src/ois/states/interact_receiver.tscn" id="8_j5s6s"]
[ext_resource type="Script" path="res://src/ois/action_components/wipe_action.gd" id="8_jf20s"]
[ext_resource type="Script" path="res://src/ois/feedback_components/waxed.gd" id="9_2d4jf"]
[ext_resource type="PackedScene" uid="uid://gs6cceyv2nc6" path="res://src/ois/states/control_raycast_visibility.tscn" id="9_76bp8"]
[ext_resource type="Script" path="res://src/assets/A1/RagControl.gd" id="13_iwv4s"]

[sub_resource type="BoxShape3D" id="BoxShape3D_07xwo"]
size = Vector3(0.2, 0.0641602, 0.2)

[sub_resource type="Resource" id="Resource_tmajd"]
script = ExtResource("7_s2rum")
state_behavior_settings = {
"ActiveCollidingState": {
"ControlRaycastVisibility": true,
"InteractReceiver": true
},
"ActiveState": {
"ControlRaycastVisibility": false,
"InteractReceiver": false
},
"IdleState": {
"ControlRaycastVisibility": false,
"InteractReceiver": false
},
"InventoryState": {
"ControlRaycastVisibility": false,
"InteractReceiver": false
},
"TriggerState": {
"ControlRaycastVisibility": false,
"InteractReceiver": false
}
}
behavior_dict = {
"ControlRaycastVisibility": false,
"InteractReceiver": false
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p3ct0"]
albedo_color = Color(0.137255, 1, 0.231373, 0.486275)

[sub_resource type="BoxMesh" id="BoxMesh_w5bnt"]
material = SubResource("StandardMaterial3D_p3ct0")
size = Vector3(0.02, 0.02, 0.02)

[sub_resource type="BoxShape3D" id="BoxShape3D_dowu4"]
size = Vector3(0.2, 0.05, 0.2)

[node name="Rag" type="RigidBody3D"]
collision_layer = 4
collision_mask = 196615
freeze_mode = 1
script = ExtResource("1_66iak")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -0.00173234, 0.0195587, 0)
shape = SubResource("BoxShape3D_07xwo")

[node name="MainMesh" type="Node3D" parent="."]

[node name="CleanRag" parent="MainMesh" instance=ExtResource("2_2n3tu")]
transform = Transform3D(-2.18557e-09, 0.05, 0, -0.05, -2.18557e-09, 0, 0, 0, 0.05, 0, 0, 0)

[node name="Rag_Oiled" parent="MainMesh" instance=ExtResource("3_i2thj")]
transform = Transform3D(-2.18557e-09, 0.05, 0, -0.05, -2.18557e-09, 0, 0, 0, 0.05, 0, 0, 0)
visible = false

[node name="GrabPointHandLeft" parent="." instance=ExtResource("2_qagp5")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.0248512, 0.0523981, 0.0942705)

[node name="GrabPointHandRight" parent="." instance=ExtResource("4_qd7nr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0248512, 0.0523981, -0.0995974)

[node name="StateManager" parent="." instance=ExtResource("5_u3ew8")]
receiver_group = "clean_rag"
settings = SubResource("Resource_tmajd")

[node name="InteractReceiver" parent="StateManager" instance=ExtResource("8_j5s6s")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0462698, 0, 0)

[node name="ControlRaycastVisibility" parent="StateManager" instance=ExtResource("9_76bp8")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.0413412, 0, 0)
raycast_length = 5.0

[node name="Laser" parent="StateManager/ControlRaycastVisibility" index="1"]
mesh = SubResource("BoxMesh_w5bnt")

[node name="InventoryItemComp" parent="." instance=ExtResource("8_i4qr8")]

[node name="ReplacementMesh" parent="InventoryItemComp" index="0"]
visible = false

[node name="MainMesh" parent="InventoryItemComp/ReplacementMesh" index="0" instance=ExtResource("2_2n3tu")]
transform = Transform3D(9.55343e-17, -2.18557e-09, -0.05, -0.05, -2.18557e-09, 0, -2.18557e-09, 0.05, -2.18557e-09, 0, 0, 0)

[node name="Rag_Oiled" parent="InventoryItemComp/ReplacementMesh" index="1" instance=ExtResource("3_i2thj")]
transform = Transform3D(9.55343e-17, -2.18557e-09, -0.05, -0.05, -2.18557e-09, 0, -2.18557e-09, 0.05, -2.18557e-09, 0, 0, 0)
visible = false

[node name="WaxReceiver" type="Area3D" parent="." groups=["wax"]]
script = ExtResource("8_jf20s")
requirement = 0.5

[node name="CollisionShape3D" type="CollisionShape3D" parent="WaxReceiver"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -0.00133772, 0.0165058, 0)
shape = SubResource("BoxShape3D_dowu4")

[node name="Waxed" type="Node3D" parent="WaxReceiver"]
script = ExtResource("9_2d4jf")
action_during = false
action_completed = true

[node name="RagControl" type="Node3D" parent="."]
script = ExtResource("13_iwv4s")

[connection signal="action_completed" from="WaxReceiver" to="RagControl" method="_on_wax_receiver_action_completed"]

[editable path="MainMesh/CleanRag"]
[editable path="StateManager/ControlRaycastVisibility"]
[editable path="InventoryItemComp"]
[editable path="InventoryItemComp/ReplacementMesh/MainMesh"]
